@@ -2012,14 +2012,12 @@ class Title {
 	/**
 	 * Should a link should be displayed as a known link, just based on its title?
 	 *
-	 * Currently, a self-link with a fragment, special pages and image pages are in
-	 * this category. Special pages never exist in the database. Some images do not
-	 * have description pages in the database, but the description page contains
-	 * useful history information that the user may want to link to.
+	 * Currently, a self-link with a fragment and special pages are in
+	 * this category. Special pages never exist in the database.
 	 */
 	function isAlwaysKnown() {
 		return  $this->isExternal() || ( 0 == $this->mNamespace && "" == $this->mDbkeyform )
-		  || NS_SPECIAL == $this->mNamespace || NS_IMAGE == $this->mNamespace;
+		  || NS_SPECIAL == $this->mNamespace;
 	}
 
 	/**
